--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,15 @@
 sentence-transformers>=2.2.2
 transformers>=4.21.0
 torch>=1.12.0
+torch-audio>=0.12.0
+torchvision>=0.13.0
 numpy>=1.21.0
 scikit-learn>=1.1.0
+
+# RETRO Model specific dependencies
+einops>=0.6.0
+datasets>=2.0.0
+tokenizers>=0.13.0
 
 # FAISS for vector similarity search
 faiss-cpu>=1.7.4
